--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <script src="https://m.vk.com/js/cmodules/mobile/common.be7bd6e03a2ec9d62a92.js?2uNWes4%2B%2BMQL3ywZf4kvckRRd27pRkLVm%2FCmdEdWPUw%3D"></script>
 <script src="https://m.vk.com/js/cmodules/mobile/grip.992f697631d9a70eb7b5.js?yVpofdefMmrHFzIGeuV3f1x6G%2FMc1p2qXzsaQeAjgXs%3D"></script>
 
-        
+        <script data-ad-client="ca-pub-8140667035994567" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       </head>
 
       <body  class="vk__page _touch vk_ios_no vk_stickers_hints_support_no opera_mini_no vk_safari_no vk__page_oauth vk_tabbar_static    vk_al_no ">
