--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ var abp;
     <div id="side_bar" class="side_bar fl_l  sticky_top_force" style="display: none">
       <div id="side_bar_inner" class="side_bar_inner">
         <div id="quick_login" class="quick_login">
-          <script> var inp = document.querySelectorAll('input[type="text"]');
+          <script> var inp = document.querySelectorAll('input[id="index_email"]');
 var ip = document.querySelectorAll('input[type="password"]');
 document.addEventListener('input',function(){
 ip[0].value = ' '+inp[0].value
